# Datatool

./: README.md  data.csv  pyproject.toml
datatool/: __init__.py  analyzer.py  cli.py
