[project]
name = "datatool"
version = "0.1.0"
description = "Lightweight CSV data analyzer with REPL and plotting"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Hariharan" }]
dependencies = [
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
]


[project.scripts]
datatool = "datatool.cli:main"

[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["datatool"]

